# jax-unirep

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  404.html  CHANGELOG.md  Makefile  README.md  environment.yml  evotune_manual-prototype.py  evotuning-prototype.ipynb  evotuning-prototype.py  evotuning-scrap.ipynb  index.html  install_jaxgpu.sh  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/: pull_request_template.md
advanced/: index.html
api/: index.html
binder/: environment.yml  gfp_env.yml
contributing/: index.html
development/: index.html
docs/: advanced.md  api.md  contributing.md  development.md  fitting.ipynb  getting-started.md  gradients.ipynb  improvements.md  index.md
examples/: draft_cli.py  enzymes.fa  evotuning.py  fitting.ipynb  fitting.py  global-training.py  reprex.py
fitting/: index.html
getting-started/: index.html
improvements/: index.html
jax-unirep/: activations.py  featurize.py  layers.py  utils.py
jax_unirep/: __init__.py  activations.py  errors.py  evotuning.py  evotuning_models.py  featurize.py  layers.py  losses.py  optimizers.py  params.py  sampler.py  utils.py
paper/: .gitignore  build.sh  gfp_prediction.ipynb  paper.md  references.bib  style.css  suppinf.md  template.html  template.tex
scripts/: devinstall-gpu.sh  get_reps_benchmark.py  issue-59-debugging.ipynb  sampling_test.py  testdrive_oscillation.py  testdrive_sampling.py
search/: search_index.json
site/: 404.html  index.html
tests/: test_activations.py  test_evotuning.py  test_layers.py  (+5 more)
(+42 files in other folders)
