# Example configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
include = '\.pyi?$'
line-length = 79
target-version = ['py37', 'py38']

# Build system information below.
# NOTE: You don't need this in your own Black configuration.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=41.0", "setuptools-scm", "wheel"]

[tool.isort]
float_to_top = true
line_length = 79
profile = "black"
src_paths = ["jax_unirep", "test"]

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
